# pihud

./: .gitignore  .gitmodules  CMakeLists.txt  build_from_jenkins.sh
cmake/: PihudConfig.cmake.in
include/pihud/: WeHaveAWinnerWidget.hpp
src/: WeHaveAWinnerWidget.cpp
